--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "-p 8001 -d C:\\Projects"
+      "commandLineArgs": "-p 8000 -d c:\\projects"
     }
   }
 }
