--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -17,12 +17,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Builders\CommandBuilder.txt" />
     <None Remove="Builders\DbContext\DbContextBuilder.txt" />
     <None Remove="Builders\DbContext\DbContextInterfaceBuilder.txt" />
+    <None Remove="Builders\QueryBuilder.txt" />
+    <None Remove="Builders\ResponseBaseBuilder.txt" />
+    <None Remove="Builders\ServiceCollectionExtensionsBuilder.txt" />
+    <None Remove="Builders\ValidationBehaviorBuilder.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Builders\AppSettingsBuilder.txt" />
+    <EmbeddedResource Include="Builders\CommandBuilder.txt" />
     <EmbeddedResource Include="Builders\ControllerBuilder.txt" />
     <EmbeddedResource Include="Builders\DbContext\DbContextBuilder.txt" />
     <EmbeddedResource Include="Builders\DbContext\DbContextInterfaceBuilder.txt" />
@@ -30,7 +36,11 @@
     <EmbeddedResource Include="Builders\LaunchSettingsBuilder.txt" />
     <EmbeddedResource Include="Builders\ModelBuilder.txt" />
     <EmbeddedResource Include="Builders\ProgramBuilder.txt" />
+    <EmbeddedResource Include="Builders\QueryBuilder.txt" />
+    <EmbeddedResource Include="Builders\ResponseBaseBuilder.txt" />
+    <EmbeddedResource Include="Builders\ServiceCollectionExtensionsBuilder.txt" />
     <EmbeddedResource Include="Builders\StartupBuilder.txt" />
+    <EmbeddedResource Include="Builders\ValidationBehaviorBuilder.txt" />
   </ItemGroup>
   
   <ItemGroup>
