--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -24,6 +24,7 @@
     <None Remove="Builders\ResponseBaseBuilder.txt" />
     <None Remove="Builders\ServiceCollectionExtensionsBuilder.txt" />
     <None Remove="Builders\ValidationBehaviorBuilder.txt" />
+    <None Remove="Commands\Settings.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +42,7 @@
     <EmbeddedResource Include="Builders\ServiceCollectionExtensionsBuilder.txt" />
     <EmbeddedResource Include="Builders\StartupBuilder.txt" />
     <EmbeddedResource Include="Builders\ValidationBehaviorBuilder.txt" />
+    <EmbeddedResource Include="Commands\Settings.txt" />
   </ItemGroup>
   
   <ItemGroup>
@@ -65,5 +67,7 @@
   
   <ItemGroup>
     <Folder Include="Builders\CSharp\" />
+    <Folder Include="Builders\Request\Commands\" />
+    <Folder Include="Builders\Request\Queries\" />
   </ItemGroup>
 </Project>
