--- a/test/Endpoint.Testing/Endpoint.Testing.csproj
+++ b/test/Endpoint.Testing/Endpoint.Testing.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Endpoint.TestingX</RootNamespace>
+    <RootNamespace>Endpoint.Testing</RootNamespace>
   </PropertyGroup>
 
 </Project>
