--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -20,6 +20,7 @@
     <None Remove="Builders\CommandBuilder.txt" />
     <None Remove="Builders\DbContext\DbContextBuilder.txt" />
     <None Remove="Builders\DbContext\DbContextInterfaceBuilder.txt" />
+    <None Remove="Builders\DtoBuilder.txt" />
     <None Remove="Builders\QueryBuilder.txt" />
     <None Remove="Builders\ResponseBaseBuilder.txt" />
     <None Remove="Builders\ServiceCollectionExtensionsBuilder.txt" />
@@ -29,6 +30,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Builders\AppSettingsBuilder.txt" />
+    <EmbeddedResource Include="Builders\DtoBuilder.txt" />
     <EmbeddedResource Include="Builders\Request\CommandBuilder.txt" />
     <EmbeddedResource Include="Builders\ControllerBuilder.txt" />
     <EmbeddedResource Include="Builders\DbContext\DbContextBuilder.txt" />
