feat: domain events

--- a/src/Endpoint.Application/Properties/launchSettings.json
+++ b/src/Endpoint.Application/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Endpoint.Cli": {
+    "Endpoint.Application": {
       "commandName": "Project",
       "commandLineArgs": "model Foo -d C:\\Projects\\ComplexAngularForms\\src\\ComplexAngularForms.Api"
     }
