--- a/src/Endpoint.Application/Endpoint.Application.csproj
+++ b/src/Endpoint.Application/Endpoint.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <None Remove="Builders\AggregateBuilder.txt" />
+    <None Remove="Builders\AggregateRootBuilder.txt" />
     <None Remove="Builders\ApiTest.txt" />
     <None Remove="Builders\AppSettingsBuilder.txt" />
     <None Remove="Builders\ControllerTestBuilder.txt" />
@@ -28,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Builders\AggregateRootBuilder.txt" />
     <EmbeddedResource Include="Builders\DomainEventBuilder.txt" />
   </ItemGroup>
 
