--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "add-resource Sprint -d C:\\projects\\BacklogCore\\src\\Backlog.Api"
+      "commandLineArgs": "add-generate-documentation-file -d C:\\projects\\Avengers\\src\\Avengers.Api"
     }
   }
 }
