--- a/src/Endpoint.Application/Endpoint.Application.csproj
+++ b/src/Endpoint.Application/Endpoint.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Endpoint.Application.Core\Endpoint.Application.Core.csproj" />
+    <ProjectReference Include="..\Plugins\Endpoint.Application.PlugIn.Identity\Endpoint.Application.PlugIn.Identity.csproj" />
   </ItemGroup>
 
 </Project>
