--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "-m true -d C:\\sandbox --help"
+      "commandLineArgs": "-m true -d C:\\sandbox"
     }
   }
 }
