--- a/src/Plugins/Endpoint.Application.Plugin.ContentManagement/Endpoint.Application.Plugin.ContentManagement.csproj
+++ b/src/Plugins/Endpoint.Application.Plugin.ContentManagement/Endpoint.Application.Plugin.ContentManagement.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Endpoint.Application.Core\Endpoint.Application.Core.csproj">
       <Private>false</Private>
+      <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
   </ItemGroup>
 
