--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -19,5 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Endpoint.Application.Core\Endpoint.Application.Core.csproj" />
     <ProjectReference Include="..\Endpoint.Application\Endpoint.Application.csproj" />
+    <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.ContentManagement\Endpoint.Application.Plugin.ContentManagement.csproj" />
+    <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.Identity\Endpoint.Application.Plugin.Identity.csproj" />
   </ItemGroup>
 </Project>
