--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -18,9 +18,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Endpoint.Application.Core\Endpoint.Application.Core.csproj" />
-    <ProjectReference Include="..\Endpoint.Application\Endpoint.Application.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.ContentManagement\Endpoint.Application.Plugin.ContentManagement.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.Identity\Endpoint.Application.Plugin.Identity.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.Spa\Endpoint.Application.Plugin.Spa.csproj" />
+    <ProjectReference Include="..\Plugins\Endpoint.Application.Plugins.ContactRequest\Endpoint.Application.Plugins.ContactRequest.csproj" />
   </ItemGroup>
 </Project>
