--- a/src/Endpoint.Cli/Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Endpoint.Cli.csproj
@@ -22,5 +22,6 @@
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.Identity\Endpoint.Application.Plugin.Identity.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugin.Spa\Endpoint.Application.Plugin.Spa.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugins.ContactRequest\Endpoint.Application.Plugins.ContactRequest.csproj" />
+    <ProjectReference Include="..\Plugins\Endpoint.Application.Plugins.DigitalAsset\Endpoint.Application.Plugins.DigitalAsset.csproj" />
   </ItemGroup>
 </Project>
