feat: model properties

--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "plugin ContactRequest -d C:\\projects\\Endpoint"
+      "commandLineArgs": "-d C:\\sandbox -r Car --properties Name:string,Make:string,Model:string"
     }
   }
 }
