--- a/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
@@ -1,19 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-
     <OutputType>Exe</OutputType>
-
     <TargetFramework>net5.0</TargetFramework>
-
     <PackAsTool>true</PackAsTool>
-
     <ToolCommandName>endpoint</ToolCommandName>
-
     <PackageOutputPath>./nupkg</PackageOutputPath>
-
-    <Version>1.0.0</Version>
-
+    <Authors>Quinntyne Brown</Authors>
+    <Company>Allagi Consulting</Company>
+    <PackageTags>clean-architecture;code-generator;scaffolding</PackageTags>
+    <RepositoryUrl>https://github.com/QuinntyneBrown/Endpoint</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
+    <FileVersion>0.1.0</FileVersion>
+    <Version>0.1.0</Version>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,4 +26,16 @@
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugins.ContactRequest\Endpoint.Application.Plugins.ContactRequest.csproj" />
     <ProjectReference Include="..\Plugins\Endpoint.Application.Plugins.DigitalAsset\Endpoint.Application.Plugins.DigitalAsset.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="nupkg\" />
+  </ItemGroup>
+  
 </Project>
