--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -17,6 +17,8 @@
     <None Remove="Templates\Api\Program.txt" />
     <None Remove="Templates\Api\Startup.txt" />
     <None Remove="Templates\Application\Dto.txt" />
+    <None Remove="Templates\Global\BicepFile.txt" />
+    <None Remove="Templates\Global\DeploySetupFile.txt" />
     <None Remove="Templates\Infrastructure\SeedData.txt" />
     <None Remove="Templates\IntegrationTests\ApiTest.txt" />
     <None Remove="Templates\Core\QueryableExtensions.txt" />
@@ -36,6 +38,8 @@
     <EmbeddedResource Include="Templates\Api\Program.txt" />
     <EmbeddedResource Include="Templates\Api\Startup.txt" />
     <EmbeddedResource Include="Templates\Application\Dto.txt" />
+    <EmbeddedResource Include="Templates\Global\DeploySetupFile.txt" />
+    <EmbeddedResource Include="Templates\Global\BicepFile.txt" />
     <EmbeddedResource Include="Templates\Infrastructure\SeedData.txt" />
     <EmbeddedResource Include="Templates\IntegrationTests\ApiTest.txt" />
     <EmbeddedResource Include="Templates\SharedKernal\QueryableExtensions.txt" />
