--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -16,6 +16,8 @@
     <None Remove="Templates\Api\LaunchSettings.txt" />
     <None Remove="Templates\Api\Program.txt" />
     <None Remove="Templates\Api\Startup.txt" />
+    <None Remove="Templates\Api\WebApplicationBuilder.txt" />
+    <None Remove="Templates\Api\WebApplicationConfiguration.txt" />
     <None Remove="Templates\Application\Dto.txt" />
     <None Remove="Templates\Global\BicepFile.txt" />
     <None Remove="Templates\Global\DeploySetupFile.txt" />
@@ -38,6 +40,8 @@
     <EmbeddedResource Include="Templates\Api\LaunchSettings.txt" />
     <EmbeddedResource Include="Templates\Api\Program.txt" />
     <EmbeddedResource Include="Templates\Api\Startup.txt" />
+    <EmbeddedResource Include="Templates\Api\WebApplicationBuilder.txt" />
+    <EmbeddedResource Include="Templates\Api\WebApplicationConfiguration.txt" />
     <EmbeddedResource Include="Templates\Application\Dto.txt" />
     <EmbeddedResource Include="Templates\Global\DeploySetupFile.txt" />
     <EmbeddedResource Include="Templates\Global\BicepFile.txt" />
